--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fe-code-challenge",
   "version": "0.0.1",
   "description": "starter project for front-end code challenge",
-  "main": "index.jsx",
+  "main": "index.js",
   "scripts": {
     "watch": "./node_modules/.bin/webpack -d --watch",
     "dev": "./node_modules/.bin/webpack-dev-server -d --hot --inline --progress --colors",
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
   },
