--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-icons": "^1.0.3-alpha5",
